# ld64

./: meson.build  meson_options.txt
EXTERNAL_HEADERS/: meson.build
EXTERNAL_HEADERS/CommonCrypto/: CommonDigestSPI.h
EXTERNAL_HEADERS/corecrypto/: ccdigest.h  ccsha1.c  ccsha2.c  ccsha2.h
EXTERNAL_HEADERS/darwin/: meson.build
EXTERNAL_HEADERS/darwin/corecrypto/: ccdigest.h
EXTERNAL_HEADERS/non-darwin/: meson.build  mkpath_np.c
EXTERNAL_HEADERS/non-darwin/CommonCrypto/: CommonDigest.h
EXTERNAL_HEADERS/non-darwin/corecrypto/: meson.build
EXTERNAL_HEADERS/non-darwin/libkern/: OSAtomic.h
EXTERNAL_HEADERS/non-darwin/mach/: mach_host.h  mach_time.h  mach_types.h  machine.h  message.h  vm_statistics.h
EXTERNAL_HEADERS/non-darwin/mach-o/: dyld.c  dyld.h  dyld_images.h  meson.build
EXTERNAL_HEADERS/non-darwin/uuid/: gen_uuid.c  meson.build  unparse.c  uuid.h
EXTERNAL_HEADERS/os/: lock_private.h
doc/man/: meson.build
doc/man/man1/: meson.build
src/: meson.build
src/abstraction/: meson.build
src/custom/: create_header.sh  meson.build  version.c
src/ld/: InputFiles.cpp  LinkEdit.hpp  Options.cpp  OutputFile.cpp  Snapshot.cpp  ld.cpp  libcodedirectory.c  meson.build  version.c
src/ld/code-sign-blobs/: endian.h  meson.build  superblob.h
src/ld/parsers/: archive_file.cpp  lto_file.cpp  meson.build
src/ld/parsers/libunwind/: AddressSpace.hpp  Registers.hpp  meson.build
src/ld/passes/: meson.build
src/ld/passes/stubs/: meson.build
src/mach_o/: meson.build
src/other/: PruneTrie.cpp  meson.build
