srcs += files('InputFiles.cpp',
              'ld.cpp',
              'Options.cpp',
              'OutputFile.cpp',
              'PlatformSupport.cpp',
              'Resolver.cpp',
              'ResponseFiles.cpp',
              'Snapshot.cpp',
              'SymbolTable.cpp',
              'libcodedirectory.c',
              'debugline.c')

incdirs += include_directories('.')

subdir('code-sign-blobs')
subdir('parsers')
subdir('passes')
