srcs += files('InputFiles.cpp',
              'ld.cpp',
              'Options.cpp',
              'FatFile.cpp',
              'Mangling.cpp',
              'OutputFile.cpp',
              'PlatformSupport.cpp',
              'Resolver.cpp',
              'ResponseFiles.cpp',
              'Snapshot.cpp',
              'SymbolTable.cpp',
              'libcodedirectory.c',
              'version.c',
              'debugline.c')

incdirs += include_directories('.')

subdir('code-sign-blobs')
subdir('parsers')
subdir('passes')
