srcs += files('archive_file.cpp',
              'generic_dylib_file.cpp',
              'lto_file.cpp',
              'macho_dylib_file.cpp',
              'macho_relocatable_file.cpp',
              'opaque_section_file.cpp',
              'textstub_dylib_file.cpp')

incdirs += include_directories('.')
subdir('libunwind')
