srcs += files('bitcode_bundle.cpp',
              'branch_island.cpp',
              'branch_shim.cpp',
              'code_dedup.cpp',
              'compact_unwind.cpp',
              'dtrace_dof.cpp',
              'dylibs.cpp',
              'got.cpp',
              'huge.cpp',
              'inits.cpp',
              'objc_constants.cpp',
              'objc.cpp',
              'order.cpp',
              'thread_starts.cpp',
              'tlvp.cpp')

subdir('stubs')
